k3s/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.home`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
